<?xml version="1.0" encoding="utf-8"?>
<layout>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/welcome_page_bg"
    tools:context=".view.SignInAndSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/space_x_white_logo_wine"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/edit_bg"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/sign_fragment_imgEmail"
                android:src="@drawable/form_elements_icons_email_enable_white"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:textColor="@color/editEmptyTxtColor"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/muli_bold"
                android:textColorHint="@color/editEmptyTxtColor"
                android:id="@+id/sign_fragment_editEmail"
                android:layout_marginBottom="5dp"
                android:background="@color/editBgColor"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:background="@drawable/edit_bg"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/sign_fragment_imgPassword"
                android:src="@drawable/form_elements_icons_password_enable_white"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/editEmptyTxtColor"
                android:fontFamily="@font/muli_bold"
                android:textColorHint="@color/editEmptyTxtColor"
                android:id="@+id/sign_fragment_editPassword"
                android:layout_marginBottom="5dp"
                android:background="@color/editBgColor"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:id="@+id/sign_fragment_txtForgotPassword"
            android:textColor="@color/favoritesTxtColor"
            android:fontFamily="@font/muli_bold"
            android:text="@string/forgot_password"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="250dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="45dp"
            android:id="@+id/sign_fragment_btnSignIn"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:background="@drawable/btn_dark_bg"
            android:fontFamily="@font/muli_bold"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="or"
            android:fontFamily="@font/muli_bold"
            android:textColor="@color/orTxtColor"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:id="@+id/sign_fragment_txtSignUp"
            android:textColor="@color/favoritesTxtColor"
            android:fontFamily="@font/muli_bold"
            android:text="@string/signup"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>

</layout>